# Graph_Time_Comparison

./: .gitignore  CMakeLists.txt  README.md  fh  file_helper.c  sanitize_graph.c  sg
Graphs/: Wiki-Vote_sanitized.txt  as-caida20071105.txt  as-caida20071105_sanitized.txt  data.txt  p2p-Gnutella04_sanitized.txt  sampleInput1.txt
Maximum_Matching/: CMakeLists.txt  bipartitePreprocessing.c  maxMatching.c  parallelMaxMatching.c
Maximum_Matching/Bipartite_Graphs/: out.bag-kos  out.brunson_corporate-leadership_corporate-leadership  out.edit-sawikibooks  out.edit-tkwikibooks  out.edit-twwiktionary  out.librec-filmtrust-ratings  out.marvel
Maximum_Matching/Bipartite_Graphs_sanitized/: out.bag-kos  out.brunson_corporate-leadership_corporate-leadership  out.brunson_revolution_revolution  out.edit-sawikibooks  out.edit-tkwikibooks  out.edit-twwiktionary  out.librec-filmtrust-ratings  out.marvel  out.moreno_crime_crime  out.opsahl-collaboration  out.opsahl-ucforum
Minimum_Spanning_Tree/: CMakeLists.txt  helper.c  kruskal  kruskal.c  parallel_kruskal.c
Minimum_Spanning_Tree/UndirectedWeightedGraphs/: Wiki-Vote.txt  Wiki-Vote_sanitized.txt  as-caida20071105_sanitized.txt  p2p-Gnutella04.txt  p2p-Gnutella04_sanitized.txt  sampleInput1.txt
Minimum_Spanning_Tree/Undirected_Weighted_Graphs/: sampleInput.txt  sampleInput_sanitized.txt
Strongly_Connected_Components/: CMakeLists.txt  parallel_scc.c  pscc  scc  scc.c
Utilities/: CMakeLists.txt
Utilities/Graphs/: CMakeLists.txt  bipartite_graph.c  bipartite_graph.h  directed_graph.c  directed_graph.h  undirected_graph.c  undirected_graph.h
Utilities/data_structures/: CMakeLists.txt  disjoint_sets.c  disjoint_sets.h  map.c  map.h  queue.c  queue.h
Utilities/format_file/: CMakeLists.txt  fh  file_helper.c  format_file.c  format_file.h  generate_graph.c  generate_graph.h
Utilities/sanitize_graphs/: sanitize_graph.c  sg
